--- a/05 Array/index.html
+++ b/05 Array/index.html
@@ -3,6 +3,11 @@
         <script type="module" defer src="app.js"></script>
     </head>
     <body>
+        <h1>You Rock my world</h1>
+        <h1>Man in the Mirror</h1>
+        <h1>Scream</h1>
+        <h1>Streetwalker</h1>
+        <h1>Come Together</h1>
     
     </body>
 </html>
