--- a/05 Array/index.html
+++ b/05 Array/index.html
@@ -1,13 +1,16 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <script type="module" defer src="app.js"></script>
-    </head>
-    <body>
-        <h1>You Rock my world</h1>
-        <h1>Man in the Mirror</h1>
-        <h1>Scream</h1>
-        <h1>Streetwalker</h1>
-        <h1>Come Together</h1>
-    
-    </body>
+    <header>
+        <h1 class="test">Smooth criminal</h1>
+        <h1 class="test">come together</h1>
+        <h1 class="test">Scream</h1>
+        <h1 class="test">Streetwalker</h1>
+        <h1 class="test">Beat it</h1>
+        <h1 class="bandName">Docent 1</h1>
+        <h1 class="bandName">Docent 2</h1>
+        <h1 class="huh?">Huh?</h1>
+        <Script type="module" defer src="app.js"> </Script>
+    </header>
+<body>
+</body>
 </html>
